fixing wiki pages e.g. sponsorship to work on mobile

--- a/static/css/layout/index.less
+++ b/static/css/layout/index.less
@@ -10,6 +10,9 @@
 div#contentBody,
 div.contentBody {
   padding: 0 20px 20px;
+  img {
+    max-width: 100%;
+  }
 }
 .section,
 section {
